# ffmpeg-normalize

./: .all-contributorsrc  .editorconfig  .git-blame-ignore-revs  .gitchangelog.rc  .gitchangelog.tpl  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.rst  avconv_normalize.py  ffmpeg_normalize.html  index.html  mkdocs.yml  normalize.m  normalize.py  pyproject.toml  release.sh  requirements.dev.txt  requirements.txt  search.js  setup.cfg  setup.py  sitemap.xml
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: claude-code-review.yml  claude.yml  deploy-docs.yml  docker-push.yml  docs.yml  python-package.yml
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
advanced/api/: index.html
advanced/faq/: index.html
api/: ffmpeg_normalize.html  search.js
avconv_normalize/: __main__.py
completions/: ffmpeg-normalize-shtab.bash  ffmpeg-normalize-shtab.zsh  ffmpeg-normalize.bash  ffmpeg-normalize.zsh
docs/: ffmpeg_normalize.html  index.md  search.js
docs-api/: ffmpeg_normalize.html  index.html  search.js
docs/about/: changelog.md  contributing.md  license.md
docs/advanced/: api.md  faq.md
docs/getting-started/: docker.md  installation.md  requirements.md
docs/usage/: album-batch-normalization.md  audio-filters.md  basic.md  cli-options.md  examples.md  (+5 more)
ffmpeg_normalize/: __init__.py  __main__.py  _cmd_utils.py  _errors.py  _ffmpeg_normalize.py  _logger.py  _media_file.py  _streams.py  _version.py
search/: search_index.json
test/: test.py  test.sh
tests/: test.m4a  test.opus  test_all.py  test_api_ground_truth.py  test_filetypes.py  test_loud.m4a  test_normal.m4a  test_presets.py  test_quiet.m4a
(+24 files in other folders)
